--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"rm -rf dist && webpack",
+    "build": "rm -rf dist && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +13,8 @@
   "dependencies": {
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.0"
   }
 }
