--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --open",
     "build": "rm -rf dist && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,9 @@
     "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^4.5.0"
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "webpack-dev-server": "^3.11.1"
   }
 }
